add: swagger delete
